client/main.scss
$body-font-family: 'Rubik';
$font-family-monospace: 'Roboto Mono';

@import '{zurb:foundation-sites}/scss/foundation';
@include foundation-everything(true);

@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&subset=latin,latin-ext");
@import url("https://fonts.googleapis.com/css?family=Rubik:400&subset=latin,latin-ext");

@mixin source-font {
  font-family: $font-family-monospace;
  font-weight: 400;
}

@mixin proportional-font {
  font-family: $body-font-family;
  font-weight: 400;
}

@mixin box-shadow {
  box-shadow: 0.125rem 0.125rem 0.375rem rgba(0, 0, 0, 0.2);
}

body {
  background: #ccc;
  height: 100%;
  margin: 0;
  padding: 0;
}

.start-app {
  .top-bar {
    border: 0;
    border-radius: 0;
    margin: 0.25rem;
    @include box-shadow;

    ul.is-dropdown-submenu {
      @include box-shadow;
    }

    button {
      margin: 0;
    }
  }

  .start-body {
    // force height on main body
    height: calc(100vh - 6.375rem);

    .row {
      height: 100%;

      .start-column {
        height: 100%;
        padding: 0.25rem;
      }
    }
  }

  .start-graphics, .start-term, .start-help {
    background-color: #f8f8f8;
    color: #000;
    display: none;
    margin: 0;
    width: 100%;
    @include box-shadow;
  }

  .x-start-orient {
    transform: translate(calc(50vw - 0.25rem), calc(32.5vh - 1.875rem)) scale(1, -1);

    @media #{$large-up} {
      // this width is sensitive to the relative size of the graphics display,
      // so if the column width changes, this needs to reflect that.
      // the desired width should be half the real width of the left column,
      // minus padding, so: (5 / 12) / 2
      transform: translate(calc(20.8333vw - 0.25rem), calc(32.5vh - 1.875rem)) scale(1, -1);
    }
  }

  .start-term {
    height: 100%;
    overflow: scroll;
    padding: 0.25rem 0.5rem;
    @include source-font;

    .start-term-output p {
      margin: 0;
    }

    .start-term-command {
      margin-top: 0.5rem;

      .start-term-input {
        display: inline-block;
      }
    }
  }

  .start-help {
    overflow: scroll;
    padding: 1.25rem;
  }

  // Window visibility/proportions for different display modes

  &.start-view-mode-graphics {
    .start-graphics {
      display: block;
      height: calc(100vh - 6.875rem);
    }
  }

  &.start-view-mode-text {
    .start-term {
      display: block;
      height: calc(100vh - 6.875rem);
    }
  }

  &.start-view-mode-split {
    .start-graphics {
      display: block;
      height: calc(65vh - 3.75rem);
    }

    .start-term {
      display: block;
      height: calc(35vh - 3.75rem);
      margin-top: 0.625rem;
    }
  }

  &.start-view-mode-help {
    .start-help {
      display: block;
      height: calc(100vh - 6.875rem);
    }
  }

  .start-editor, .start-builder {
    height: 100%;
    line-height: 1.35;
    @include box-shadow;
  }

  .start-editor {
    font-size: 1rem;
    @include source-font;

    .ace_indent-guide {
      background: none;
    }
  }

  .start-builder {
    .blocklyText {
      @include proportional-font;
    }
  }
}

.blocklyToolboxDiv {
  .blocklyTreeRow {
    height: 1.65rem;
    padding-right: 1rem;
    padding-top: 0.125rem;
  }
  .blocklyTreeLabel {
    @include proportional-font;
  }
}

.blocklyWidgetDiv {
  .blocklyHtmlInput {
    height: 1.375rem;
    @include proportional-font;
  }
}

